<resources>
    <string name="app_name">Calculator</string>
    <string name="lomie">Lo Mie Taksam</string>
    <string name="lomie_l">Lo Mie Besar</string>
    <string name="lomie_s">Lo Mie Kecil</string>
    <string name="dry_noodle_l">Mie Polos Besar</string>
    <string name="dry_noodle_s">Mie Polos Kecil</string>
    <string name="wonton_noodle_l">Mie Pangsit Besar</string>
    <string name="wonton_noodle_s">Mie Pangsit Kecil</string>
    <string name="calculate">Hitung</string>
    <string name="result">Hasil</string>
</resources>