<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical"
    tools:context=".LomieActivity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lomie_l" />
    <EditText
        android:id="@+id/et_lomie_l"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:lines="1" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lomie_s" />
    <EditText
        android:id="@+id/et_lomie_s"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:lines="1" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dry_noodle_l" />
    <EditText
        android:id="@+id/et_dry_noodle_l"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:lines="1" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dry_noodle_s" />
    <EditText
        android:id="@+id/et_dry_noodle_s"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:lines="1" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/wonton_noodle_l" />
    <EditText
        android:id="@+id/et_wonton_noodle_l"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:lines="1" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/wonton_noodle_s" />
    <EditText
        android:id="@+id/et_wonton_noodle_s"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:lines="1" />
    <Button
        android:id="@+id/btn_calculate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/calculate" />
    <TextView
        android:id="@+id/tv_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/result"
        android:textSize="24sp"
        android:textStyle="bold" />
</LinearLayout>